Update unicode-data to v1.14

--- a/texmf/tex/generic/unicode-data/load-unicode-data.tex
+++ b/texmf/tex/generic/unicode-data/load-unicode-data.tex
@@ -1,6 +1,6 @@
 % File load-unicode-data.tex
 %
-% Copyright 2015-2019 The LaTeX3 Project
+% Copyright 2015-2020 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of
 % the LaTeX Project Public License (LPPL), either version 1.3c of
@@ -57,7 +57,7 @@
   \catcode`\^=7 %
   \newlinechar=`\^^J %
   \message{^^J}%
-  \message{load-unicode-data.tex v1.10 (2019-08-21)^^J}%
+  \message{load-unicode-data.tex v1.14 (2020-10-24)^^J}%
   \message{Reading Unicode data^^J}%
 % The first stage of parsing is dealing with the fact that there are lots of
 % data items separated by |;|. Of those, only a few are needed so they are
@@ -177,8 +177,8 @@
 % There is no version data in |UnicodeData.txt|: log that it is being used with
 % a hard-coded date (the modification date from ftp.unicode.org). This obviously
 % needs to be updated when a new download takes place!
-  \message{\string# UnicodeData-12.1.0.txt^^J}%
-  \message{\string# Modified 2019-04-01 05:08:00 GMT [MFK]^^J}%
+  \message{\string# UnicodeData-13.0.0.txt^^J}%
+  \message{\string# Modified 2020-03-12 11:00:00 GMT [JAW]^^J}%
 % Actually loading the file requires an input stream, done directly.
 % There is a blank line at the end of the data source so there is a check
 % here for a |\par|.
