change name from dflt to default

--- a/l3kernel/l3str-convert.dtx
+++ b/l3kernel/l3str-convert.dtx
@@ -325,10 +325,10 @@
     \sys_if_engine_xetex_p:
   }
   {
-    \prop_gput:Nnn \g_@@_alias_prop { dflt } {  }
+    \prop_gput:Nnn \g_@@_alias_prop { default } {  }
   }
   {
-    \prop_gput:Nnn \g_@@_alias_prop { dflt } { utf8 }
+    \prop_gput:Nnn \g_@@_alias_prop { default } { utf8 }
   }
 %    \end{macrocode}
 % \end{variable}
