Drop loading xparse by our own packages

--- a/l3trial/l3ldb/l3ldbparse.dtx
+++ b/l3trial/l3ldb/l3ldbparse.dtx
@@ -39,8 +39,8 @@
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
-\usepackage{textcomp,xparse}
-% \usepackage{xparse,xlists,xlists-samples}
+\usepackage{textcomp}
+% \usepackage{xlists,xlists-samples}
 % \usepackage{ldcdoc}
 \begin{document}
   \DocInput{l3ldbparse.dtx}
