--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -23,9 +23,6 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{xparse}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
@@ -736,7 +733,7 @@
 %    \begin{macrocode}
 \ProvidesExplPackage{xgalley}{2020-01-29}{}
   {L3 Experimental galley}
-\RequirePackage{xparse,xtemplate,l3galley}
+\RequirePackage{xtemplate,l3galley}
 %    \end{macrocode}
 %
 % \subsection{Variables}
