--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -22,9 +22,6 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{xparse}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
@@ -53,7 +50,7 @@
 % \begin{documentation}
 %
 % This experimental module explores how to re-implement core \LaTeXe{}
-% box constructs using \pkg{xparse} and \pkg{expl3} coding. As such, it provides
+% box constructs using \pkg{ltcmd} and \pkg{expl3} coding. As such, it provides
 % as far as possible the \LaTeXe{} \textsc{api} (except where explicitly
 % noted). Other than separation of layers, there is no significant new
 % functionality here
@@ -554,7 +551,7 @@
 %   is aligned within the box to the left, center or right as appropriate.
 % \end{function}
 %
-% \subsection{Possible additions to \pkg{xparse}}
+% \subsection{Possible additions to \pkg{ltcmd}}
 %
 % \begin{function}{\CoordsToLengths}
 %   \begin{syntax}
@@ -1377,7 +1374,7 @@
 % \end{macro}
 %
 % \begin{environment}{minipage}
-%   The environment form of \cs{parbox}: we get to show off \pkg{xparse}'s
+%   The environment form of \cs{parbox}: we get to show off \pkg{ltcmd}'s
 %   ability to use arguments at the end of an environment.
 %    \begin{macrocode}
 \RenewDocumentEnvironment { minipage } { O { c } o O {#1} m }
@@ -1465,7 +1462,7 @@
 %   This is the same idea as for \cs{makebox} but saved in a coffin.
 %   Does that mean we should have some more \enquote{complete} code-level
 %   functionality here? Alternatively, one could consider using the
-%   \verb*|makebox code| function defined by \pkg{xparse} inside the coffin
+%   \verb*|makebox code| function defined by \pkg{ltcmd} inside the coffin
 %   setting. Question: should the syntax processing (\cs{IFNoValueTF} test)
 %   take place inside or outside of the coffin setting stage?
 %    \begin{macrocode}
