Drop a few refs to xparse

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -168,7 +168,7 @@ and all files in that bundle must be distributed together.
 % Furthermore, we need another \enquote{layer} of documentation commands
 % to account for \enquote{user-macro} as opposed to
 % \enquote{code-functions}; the \pkg{expl3} functions should be
-% documented differently, probably, to the \pkg{xparse} user macros (at
+% documented differently, probably, to the \pkg{ltcmd} user macros (at
 % least in terms of indexing).
 %
 % In no particular order, a list of things to do:
@@ -1590,7 +1590,7 @@ and all files in that bundle must be distributed together.
 % \begin{macro}{\@@_pdfstring_newline:w}
 %   We avoid some hyperref warnings by making |\\| (almost) trivial in
 %   bookmarks: more precisely it might be used with a star and an
-%   optional argument, which we thus remove using an \pkg{xparse}
+%   optional argument, which we thus remove using an \pkg{ltcmd}
 %   expandable command.  Since there cannot be trailing optional
 %   arguments, pick up an extra mandatory one and put it back.
 %    \begin{macrocode}
@@ -2932,7 +2932,7 @@ and all files in that bundle must be distributed together.
 %
 % \begin{macro}{\@@_macro:nnw}
 %   The arguments are a key--value list of \meta{options} and a
-%   comma-list of \meta{names}, read verbatim by \pkg{xparse}.  First
+%   comma-list of \meta{names}, read verbatim by \pkg{ltcmd}.  First
 %   initialize some variables before applying the \meta{options}, then
 %   parse the \meta{names} to get a sequence of macro names, then apply
 %   \cs{@@_macro_single:nNN} to each (this step is more subtle than
