change more dflt to default

--- a/l3kernel/l3str-convert.dtx
+++ b/l3kernel/l3str-convert.dtx
@@ -106,7 +106,7 @@
 %     \midrule
 %     \texttt{clist}                       & comma-list of integers \\
 %     \meta{empty}                         & native (Unicode) string \\
-%     \texttt{dflt}                        & like \texttt{utf8} with 8-bit engines,
+%     \texttt{default}                        & like \texttt{utf8} with 8-bit engines,
 %                                            and like native with unicode-engines \\
 %     \bottomrule
 %   \end{tabular}
