New internal interface for kerns

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -917,6 +917,16 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{'\__kernel_kern:n}
+%   We need kerns in a few places. At present, we don't have a module for
+%   this concept, so it goes in at first use: here. The idea is to avoid
+%   repeated use of the bare primitive.
+%    \begin{macrocode}
+\cs_new_protected:Npn \__kernel_kern:n #1
+  { \tex_kern:D \@@_dim_eval:n {#1} }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Creating and initialising boxes}
 %
 % \TestFiles{m3box001.lvt}
@@ -1768,7 +1778,7 @@
     \hbox_set:Nn \l_@@_internal_box { \box_use:N #1 }
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D -\l_@@_left_new_dim
+        \__kernel_kern:n { -\l_@@_left_new_dim }
         \hbox:n
           {
             \@@_backend_rotate:Nn
@@ -2227,7 +2237,7 @@
       {
         \hbox_to_wd:nn { \l_@@_right_new_dim }
           {
-            \tex_kern:D \l_@@_right_new_dim
+            \__kernel_kern:n { \l_@@_right_new_dim }
             \box_use_drop:N \l_@@_internal_box
             \tex_hss:D
           }
@@ -2236,7 +2246,7 @@
         \box_set_wd:Nn \l_@@_internal_box { \l_@@_right_new_dim }
         \hbox:n
           {
-            \tex_kern:D \c_zero_dim
+            \__kernel_kern:n { 0pt }
             \box_use_drop:N \l_@@_internal_box
             \tex_hss:D
           }
