--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -732,9 +732,9 @@
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D - \@@_dim_eval:n {#2}
+        \__kernel_kern:n { -#2 }
         \box_use:N #1
-        \tex_kern:D - \@@_dim_eval:n {#4}
+        \__kernel_kern:n { -#4 }
       }
 %    \end{macrocode}
 %   For the height and depth, there is a need to watch the baseline is
@@ -809,9 +809,9 @@
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D - \@@_dim_eval:n {#2}
+        \__kernel_kern:n { -#2 }
         \box_use:N #1
-        \tex_kern:D \@@_dim_eval:n { #4 - \box_wd:N #1 }
+        \__kernel_kern:n { #4 - \box_wd:N #1 }
       }
     \dim_compare:nNnTF {#3} < \c_zero_dim
       {
