--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1412,10 +1412,8 @@
 %    \begin{macrocode}
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D
-          \dim_eval:n
+        \__kernel_kern:n
             { \l_@@_bounding_shift_dim - \l_@@_left_corner_dim }
-          \exp_stop_f:
         \box_move_down:nn { \l_@@_bottom_corner_dim }
           { \box_use:N #1 }
       }
@@ -1870,12 +1868,12 @@
     \hbox_set:Nn \l_@@_aligned_coffin
       {
         \dim_compare:nNnT { \l_@@_offset_x_dim } < \c_zero_dim
-          { \tex_kern:D -\l_@@_offset_x_dim }
+          { \__kernel_kern:n { -\l_@@_offset_x_dim } }
         \hbox_unpack:N \l_@@_aligned_coffin
         \dim_set:Nn \l_@@_internal_dim
           { \l_@@_offset_x_dim - \box_wd:N #1 + \box_wd:N #4 }
         \dim_compare:nNnT \l_@@_internal_dim < \c_zero_dim
-          { \tex_kern:D -\l_@@_internal_dim }
+          { \__kernel_kern:n { -\l_@@_internal_dim } }
       }
 %    \end{macrocode}
 %   The coffin structure is reset, and the corners are cleared: only
@@ -2001,8 +1999,8 @@
     \hbox_set:Nn \l_@@_aligned_internal_coffin
       {
         \box_use:N #1
-        \tex_kern:D -\box_wd:N #1
-        \tex_kern:D \l_@@_offset_x_dim
+        \__kernel_kern:n { -\box_wd:N #1 }
+        \__kernel_kern:n { \l_@@_offset_x_dim }
         \box_move_up:nn { \l_@@_offset_y_dim } { \box_use:N #4 }
       }
     \coffin_set_eq:NN #9 \l_@@_aligned_internal_coffin
@@ -2455,8 +2453,8 @@
     \hbox_set:Nn \l_@@_aligned_coffin
       {
         \box_use:N \l_@@_display_coffin
-        \tex_kern:D -\box_wd:N \l_@@_display_coffin
-        \tex_kern:D \l_@@_offset_x_dim
+        \__kernel_kern:n { -\box_wd:N \l_@@_display_coffin }
+        \__kernel_kern:n { \l_@@_offset_x_dim }
         \box_move_up:nn { \l_@@_offset_y_dim } { \box_use:N #1 }
       }
     \box_set_ht:Nn \l_@@_aligned_coffin
