--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -259,6 +259,13 @@
 %   that \tn{errorcontextlines} is $-1$ when displaying a message.
 % \end{function}
 %
+% \begin{variable}{\__kernel_kern:n}
+%   \begin{syntax}
+%     \cs{__kernel_kern:n} \Arg{length}
+%   \end{syntax}
+%   Inserts a kern of the specified \meta{length}, a dimension expression.
+% \end{variable}
+%
 % \begin{function}
 %   {\__kernel_msg_new:nnnn, \__kernel_msg_new:nnn}
 %   \begin{syntax}
