--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -414,7 +414,7 @@
 \cs_new_protected:Npn \tree_ordered:
   {
     \box_use_drop:N \l_tree_parent_box
-    \tex_kern:D \c_one_sp_dim
+    \__kernel_kern:n { \c_one_sp_dim }
   }
 \cs_new_protected:Npn \tree_reversed:
   {
@@ -422,7 +422,7 @@
     \box_use_drop:N \l_tree_first_box
     \tex_setbox:D \l_tree_first_box \tex_box:D \l_tree_second_box
     \box_use_drop:N \l_tree_parent_box
-    \tex_kern:D - \c_one_sp_dim
+    \__kernel_kern:n { -\c_one_sp_dim }
   }
 %    \end{macrocode}
 % \end{macro}
