--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -72,9 +72,7 @@ independent programming language.
 % Each of the following \DocInput lines includes a file with extension
 % .dtx. Each of these files may be typeset separately. For instance
 %   pdflatex l3box.dtx
-% will typeset the source of the LaTeX3 box commands. If you use the
-% Makefile, the index will be generated automatically; e.g.,
-%   make doc F=l3box
+% will typeset the source of the LaTeX3 box commands.
 %
 % If this file is processed, each of these separate dtx files will be
 % contained as a part of a single document.
