--- a/l3kernel/doc/source3.tex
+++ b/l3kernel/doc/source3.tex
@@ -28,7 +28,7 @@ for those people who are interested.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% This document typesets the LaTeX3 sources as a single document.
+% This document typesets the expl3 sources as a single document.
 % This produces quite a large file (more than 780 pages).
 %
 % There is also a shorter version (interface3.tex) that only typesets the
@@ -44,7 +44,7 @@ for those people who are interested.
 
 \begin{document}
 
-\title{The \LaTeX3 Sources}
+\title{The \pkg{expl3} Sources}
 \author{%
  The \LaTeX{} Project\thanks
    {%
