--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -89,6 +89,12 @@ stand-alone \LaTeX3 is developed.
 \makeatletter
 % l3doc is based on article, but for these very large documents we need
 % chapters; the code is based on the standard classes but somewhat simplified
+\renewcommand\part{%
+    \clearpage
+  \thispagestyle{plain}%
+  \@tempswafalse
+  \null\vfil
+  \secdef\@part\@spart}
 \newcounter {chapter}
 \numberwithin{section}{chapter}
 \renewcommand \thechapter {\@arabic\c@chapter}
