--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -158,6 +158,7 @@ stand-alone \LaTeX3 is developed.
 \renewcommand*\l@subsection{\@dottedtocline{2}{3.8em}{3.2em}}
 \renewcommand*\l@subsubsection{\@dottedtocline{3}{7.0em}{4.1em}}
 \def\partname{Part}
+\def\toclevel@part{-1} 
 \def\maketitle{\chapter{\@title}}
 \let\thanks\@gobble
 \let\DelayPrintIndex\PrintIndex
