--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -11,7 +11,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -22,9 +22,6 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{expl3}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
@@ -34,7 +31,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3color} package\\ Experimental color support^^A
+%   The \textsf{l3color} package\\ Color support^^A
 % }
 %
 % \author{^^A
@@ -51,6 +48,32 @@
 % \maketitle
 %
 % \begin{documentation}
+%
+% \section{Color in boxes}
+%
+% Controlling the color of text in boxes requires a small number of control
+% functions, so that the boxed material uses the color at the point where
+% it is set, rather than where it is used.
+%
+% \begin{function}[added = 2011-09-03]{\color_group_begin:, \color_group_end:}
+%   \begin{syntax}
+%     \cs{color_group_begin:}
+%       \ldots
+%     \cs{color_group_end:}
+%   \end{syntax}
+%   Creates a color group: one used to \enquote{trap} color settings.
+%   This grouping is built in to for example \cs{hbox_set:Nn}.
+% \end{function}
+%
+% \begin{function}[added = 2011-09-03]{\color_ensure_current:}
+%   \begin{syntax}
+%     \cs{color_ensure_current:}
+%   \end{syntax}
+%   Ensures that material inside a box uses the foreground color
+%   at the point where the box is set, rather than that in force when the
+%   box is used. This function should usually be used within a
+%   \cs{color_group_begin:} \ldots \cs{color_group_end:} group.
+% \end{function}
 %
 % \section{Color models}
 %
@@ -422,10 +445,89 @@
 %<@@=color>
 %    \end{macrocode}
 %
+% \subsection{Basics}
+%
+% \begin{variable}
+%   {\l_@@_current_tl}
+%   The color currently active for foreground (text, \emph{etc.}) material.
+%   This is stored in the form of a color model followed by one or more
+%   values. There are four pre-defined models, three of which take numerical
+%   values in the range $[0,1]$:
+%   \begin{itemize}
+%     \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
+%       value running from $0$ (fully black) to $1$ (fully white)
+%     \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}}
+%     \item \texttt{rgb \meta{red} \meta{green} \meta{blue}}
+%   \end{itemize}
+%   Notice that the value are separated by spaces. There is a fourth pre-defined
+%   model using a string value and a numerical one:
+%   \begin{itemize}
+%     \item \texttt{spot \meta{name} \meta{tint}} A pre-defined spot color,
+%       where the \meta{name} should be a pre-defined string color name and the
+%       \meta{tint} should be in the range $[0,1]$.
+%   \end{itemize}
+%
+%   Additional models may be created to allow mixing of spot colors. The
+%   number of data entries these require will depend on the number of
+%   colors to be mixed.
+%   \begin{texnote}
+%     The content of \cs{l_@@_current_tl} comprises two brace groups, the
+%     first containing the color model and the second containing the value(s)
+%     applicable in that model.
+%   \end{texnote}
+% \end{variable}
+%
+% \begin{macro}{\color_group_begin:, \color_group_end:}
+%   Grouping for color is the same as using the basic \cs{group_begin:}
+%   and \cs{group_end:} functions.  However, for semantic reasons, they
+%   are renamed here.
 %    \begin{macrocode}
-\ProvidesExplPackage{l3color}{2021-02-06}{}
-  {L3 Experimental color support}
+\cs_new_eq:NN \color_group_begin: \group_begin:
+\cs_new_eq:NN \color_group_end:   \group_end:
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\color_ensure_current:}
+%   A driver-independent wrapper for setting the foreground color to the
+%   current color \enquote{now}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \color_ensure_current:
+  {
+    \@@_backend_pickup:N \l_@@_current_tl
+    \@@_select:N \l_@@_current_tl
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\@@_select:N}
+% \begin{macro}{\@@_select:nn}
+%    Take an internal color specification and pass it to the driver. This code
+%    is needed to ensure the current color but will also be used by the
+%    higher-level experimental material.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_select:N #1
+  { \exp_after:wN \@@_select:nn #1 }
+\cs_new_protected:Npn \@@_select:nn #1#2
+  { \use:c { @@_backend_select_ #1 :n } {#2} }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{variable}{\l_@@_current_tl}
+%   The current color, with the model and 
+%    \begin{macrocode}
+\tl_new:N \l_@@_current_tl
+\tl_set:Nn \l_@@_current_tl { { gray } { 0 } }
+%    \end{macrocode}
+% \end{variable}
+
 %
 % \subsection{Predefined color names}
 %
