--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -55,10 +55,10 @@ these conventions. However, in the main direct use of the primitives is
 not required or encouraged: the \pkg{expl3} modules define an
 independent low-level \LaTeX3 programming language.
 
-he \pkg{expl3} modules are designed to be loaded on top of
+The \pkg{expl3} modules are designed to be loaded on top of
 \LaTeXe{}. With an up-to-date \LaTeXe{} kernel, this material is loaded
 as part of the format. The fundamental programming code can also be loaded
-with other \TeX{} formats, subject ot restrictions on the full range of
+with other \TeX{} formats, subject to restrictions on the full range of
 functionality.
 
 \end{abstract}
