Move color stack push/pop to cross-kernel prefix
We need

--- a/l3backend/l3backend-opacity.dtx
+++ b/l3backend/l3backend-opacity.dtx
@@ -151,7 +151,7 @@
     \pdfmanagement_add:nnn { Page / Resources / ExtGState }
       { opacity #1 }
       { << /ca ~ #1 /CA ~ #1 >> }
-    \@@_backend_stack_push:nn \c_@@_backend_stack_int
+    \__kernel_color_backend_stack_push:nn \c_@@_backend_stack_int
       { /opacity #1 ~ gs }
     \group_insert_after:N \@@_backend_reset:
   }
@@ -160,7 +160,7 @@
     \cs_gset_protected:Npn \@@_backend_select_aux:n #1 { }
   }
 \cs_new_protected:Npn \@@_backend_reset:
- { \@@_backend_stack_pop:n \c_@@_backend_stack_int }
+ { \__kernel_color_backend_stack_pop:n \c_@@_backend_stack_int }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -195,7 +195,7 @@
         \pdfmanagement_add:nnn { Page / Resources / ExtGState }
           { opacity.stroke #1 }
           { << /CA ~ #2 >> }
-        \@@_backend_stack_push:nn \c_@@_backend_stack_int
+        \__kernel_color_backend_stack_push:nn \c_@@_backend_stack_int
          { /opacity.fill #1 ~ gs /opacity.stroke #2 ~ gs }
         \group_insert_after:N \@@_backend_reset:
       }
