Move l3pdf to l3kernel

--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -22,9 +22,6 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{expl3}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
@@ -56,7 +53,7 @@
 %
 % \subsection{Objects}
 %
-% \begin{function}[added = 2019-06-02]{\pdf_object_new:nn}
+% \begin{function}[added = 2021-02-10]{\pdf_object_new:nn}
 %   \begin{syntax}
 %     \cs{pdf_object_new:nn} \Arg{object} \Arg{type}
 %   \end{syntax}
@@ -78,7 +75,7 @@
 %   \end{syntax}
 %   Tests whether an object with name \Arg{object} has been defined.
 % \end{function}
-% \begin{function}[added = 2019-06-02]
+% \begin{function}[added = 2021-02-10]
 %   {\pdf_object_write:nn, \pdf_object_write:nx}
 %   \begin{syntax}
 %     \cs{pdf_object_write:nn} \Arg{object} \Arg{content}
@@ -97,7 +94,7 @@
 %   \end{itemize}
 % \end{function}
 %
-% \begin{function}[EXP, added = 2019-06-02]{\pdf_object_ref:n}
+% \begin{function}[EXP, added = 2021-02-10]{\pdf_object_ref:n}
 %   \begin{syntax}
 %     \cs{pdf_object_ref:n} \Arg{object}
 %   \end{syntax}
@@ -105,7 +102,7 @@
 %   in for example page resource allocation
 % \end{function}
 %
-% \begin{function}[added = 2019-06-02]
+% \begin{function}[added = 2021-02-10]
 %   {\pdf_object_now:nn, \pdf_object_now:nx}
 %   \begin{syntax}
 %     \cs{pdf_object_now:nn} \Arg{type} \Arg{content}
@@ -123,7 +120,7 @@
 %   \end{itemize}
 % \end{function}
 %
-% \begin{function}[EXP, added = 2019-06-02]{\pdf_object_last:}
+% \begin{function}[EXP, added = 2021-02-10]{\pdf_object_last:}
 %   \begin{syntax}
 %     \cs{pdf_object_last:}
 %   \end{syntax}
@@ -133,7 +130,7 @@
 %
 % \subsection{Version}
 %
-% \begin{function}[pTF, EXP, added = 2019-06-02]{\pdf_version_compare:Nn}
+% \begin{function}[pTF, EXP, added = 2021-02-10]{\pdf_version_compare:Nn}
 %   \begin{syntax}
 %     \cs{pdf_version_compare:NnTF} \meta{comparator} \Arg{version} \Arg{true code} \Arg{false code}
 %   \end{syntax}
@@ -142,7 +139,7 @@
 %   or \meta{false code} will be left in the output stream.
 % \end{function}
 %
-% \begin{function}[added = 2019-06-02]
+% \begin{function}[added = 2021-02-10]
 %   {\pdf_version_gset:n, \pdf_version_min_gset:n}
 %   \begin{syntax}
 %     \cs{pdf_version_gset:n} \Arg{version}
@@ -155,7 +152,7 @@
 %   initialised.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2019-06-02]
+% \begin{function}[EXP, added = 2021-02-10]
 %   {\pdf_version:, \pdf_version_major:, \pdf_version_minor:}
 %   \begin{syntax}
 %     \cs{pdf_version:}
@@ -165,7 +162,7 @@
 %
 % \subsection{Compression}
 %
-% \begin{function}[added = 2019-06-02]{\pdf_uncompress:}
+% \begin{function}[added = 2021-02-10]{\pdf_uncompress:}
 %   \begin{syntax}
 %     \cs{pdf_uncompress:}
 %   \end{syntax}
@@ -257,11 +254,6 @@
 %<@@=pdf>
 %    \end{macrocode}
 %
-%    \begin{macrocode}
-\ProvidesExplPackage{l3pdf}{2021-02-06}{}
-  {L3 Experimental core PDF support}
-%    \end{macrocode}
-%
 % \begin{variable}{\s_@@_stop}
 %   Internal scan marks.
 %    \begin{macrocode}
@@ -271,16 +263,20 @@
 %
 % \begin{variable}{\g_@@_init_bool}
 %   A flag so we have some chance of avoiding setting things we are not
-%   allowed to.
+%   allowed to. As we are potentially early in the format, we have to work
+%   a bit harder than ideal.
 %    \begin{macrocode}
 \bool_new:N \g_@@_init_bool
-%<*package>
-\cs_if_exist:NT \documentclass
+\bool_lazy_and:nnT
+  { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
+  { \tl_if_exist_p:N \@expl@finalise@setup@@@@ }
   {
-    \AtBeginDocument
-      { \bool_gset_true:N \g_@@_init_bool }
+    \tl_put_right:Nn \@expl@finalise@setup@@@@
+      {
+        \AtBeginDocument
+          { \bool_gset_true:N \g_@@_init_bool }
+      }
   }
-%</package>
 %    \end{macrocode}
 % \end{variable}
 %
@@ -313,7 +309,7 @@
   { \@@_backend_object_new:nn {#1} {#2} }
 \prg_new_conditional:Npnn \pdf_object_if_exist:n #1 { p , T , F , TF }
   {
-    \int_if_exist:cTF { c__pdf_backend_object_ \tl_to_str:n {#1} _int }
+    \int_if_exist:cTF { c_@@_backend_object_ \tl_to_str:n {#1} _int }
      { \prg_return_true: }
      { \prg_return_false:}
   }
@@ -341,9 +337,9 @@
 %     @@_version_compare_<:w ,
 %     @@_version_compare_>:w
 %   }
-%    \begin{macrocode}
 %   To compare version, we need to split the given value then deal with both
 %   major and minor version
+%    \begin{macrocode}
 \prg_new_conditional:Npnn \pdf_version_compare:Nn #1#2 { p , T , F , TF }
   { \use:c { @@_version_compare_ #1 :w } #2 . . \s_@@_stop }
 \cs_new:cpn { @@_version_compare_=:w } #1 . #2 . #3 \s_@@_stop
@@ -419,14 +415,14 @@
 %
 % \begin{macro}{\pdf_destination:nn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \pdf_destination:nn #1 #2
-  { \@@_backend_destination:nn {#1}{#2} }
+\cs_new_protected:Npn \pdf_destination:nn #1#2
+  { \@@_backend_destination:nn {#1} {#2} }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\pdf_destination:nnnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \pdf_destination:nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \pdf_destination:nnnn #1#2#3#4
   {
     \hbox_to_zero:n
       { \@@_backend_destination:nnnn {#1} {#2} {#3} {#4} }
