--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -804,16 +804,17 @@
         / \str_convert_pdfname:n {#1} ~ #2 ~
         \pdf_object_last:
       }
-    \use:x
+    \cs_if_exist:NT \pdfmanagement_add:nnn
       {
-        \pdfmanagement_add:nnn
-          { Page / Resources / ColorSpace }
-          { color \int_use:N \g_@@_model_int }
-          { \pdf_object_last: }
+        \use:x
+          {
+            \pdfmanagement_add:nnn
+              { Page / Resources / ColorSpace }
+              { color \int_use:N \g_@@_model_int }
+              { \pdf_object_last: }
+          }
       }
   }
-\cs_if_exist:NF \pdf_object_now:nn
-  { \cs_gset_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5 { } }
 \cs_new_protected:Npn \@@_backend_separation_init:n #1
   {
     \pdf_object_now:nx { array } {#1}
@@ -891,16 +892,17 @@
         #2 ~
         \pdf_object_last:
       }
-    \use:x
+    \cs_if_exist:NT \pdfmanagement_add:nnn
       {
-        \pdfmanagement_add:nnn
-          { Page / Resources / ColorSpace }
-          { color \int_use:N \g_@@_model_int }
-          { \pdf_object_last: }
+        \use:x
+          {
+            \pdfmanagement_add:nnn
+              { Page / Resources / ColorSpace }
+              { color \int_use:N \g_@@_model_int }
+              { \pdf_object_last: }
+          }
       }
   }
-\cs_if_exist:NF \pdf_object_now:nn
-  { \cs_gset_protected:Npn \@@_backend_devicen_init:nnn #1#2#3 { } }
 \cs_new:Npn \@@_backend_devicen_init:w #1 ~ #2 \s_@@_stop
   {
     + 1
