Move 'PDF initialised' code to kernel-level hook
I wonder about this one or the one used to load the
backend: that could be right but it's technically internal
to the sys module.

--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -271,9 +271,9 @@
   { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
   { \tl_if_exist_p:N \@expl@finalise@setup@@@@ }
   {
-    \tl_put_right:Nn \@expl@finalise@setup@@@@
+    \tl_gput_right:Nn \@expl@finalise@setup@@@@
       {
-        \AtBeginDocument
+        \tl_gput_right:Nn \@kernel@after@begindocument
           { \bool_gset_true:N \g_@@_init_bool }
       }
   }
