--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -314,11 +314,17 @@
      { \prg_return_false:}
   }
 \cs_new_protected:Npn \pdf_object_write:nn #1#2
-  { \@@_backend_object_write:nn {#1} {#2} }
+  {
+    \@@_backend_object_write:nn {#1} {#2}
+    \bool_gset_true:N \g_@@_init_bool
+  }
 \cs_generate_variant:Nn \pdf_object_write:nn { nx }
 \cs_new:Npn \pdf_object_ref:n #1 { \@@_backend_object_ref:n {#1} }
 \cs_new_protected:Npn \pdf_object_now:nn #1#2
-  { \@@_backend_object_now:nn {#1} {#2} }
+  {
+    \@@_backend_object_now:nn {#1} {#2}
+    \bool_gset_true:N \g_@@_init_bool
+  }
 \cs_generate_variant:Nn \pdf_object_now:nn { nx }
 \cs_new:Npn \pdf_object_last: { \@@_backend_object_last: }
 %    \end{macrocode}
