--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -128,6 +128,13 @@
 %   created. This is particularly useful for anonymous objects.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2021-02-10]{\pdf_pageobject_ref:n}
+%   \begin{syntax}
+%     \cs{pdf_pagobject_ref:n} \Arg{pageobject}
+%   \end{syntax}
+%   Inserts the appropriate information to reference the \meta{pageobject}.
+% \end{function}
+%
 % \subsection{Version}
 %
 % \begin{function}[pTF, EXP, added = 2021-02-10]{\pdf_version_compare:Nn}
@@ -332,6 +339,13 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\pdf_pageobject_ref:n}
+%    \begin{macrocode}
+\cs_new:Npn \pdf_pageobject_ref:n #1
+  { \@@_backend_pageobject_ref:n {#1} }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Version}
