Missed some backend parts

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -790,7 +790,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5
   {
-    \pdf_object_now:nx { dict }
+    \pdf_object_unnamed_write:nx { dict }
       {
         /FunctionType ~ 2
         /Domain ~ [0 ~ 1]
@@ -817,7 +817,7 @@
   }
 \cs_new_protected:Npn \@@_backend_separation_init:n #1
   {
-    \pdf_object_now:nx { array } {#1}
+    \pdf_object_unnamed_write:nx { array } {#1}
   }
 %    \end{macrocode}
 %   For CIELAB colors, we need one object per document for the illuminant,
@@ -845,7 +845,7 @@
       { 100 ~ 0 ~ 0 }
       {#3}
   }
-\cs_if_exist:NF \pdf_object_now:nn
+\cs_if_exist:NF \pdf_object_unnamed_write:nn
   {
     \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3
       { }
@@ -863,7 +863,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_devicen_init:nnn #1#2#3
   {
-    \pdf_object_now:nx { stream }
+    \pdf_object_unnamed_write:nx { stream }
       {
         {
           /FunctionType ~ 4 ~
