Correct one message name

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1943,7 +1943,7 @@
       { \@@_generate_conditional:nnNNNnnn {#1} {#2} #3 #4 #5 }
       { \tl_count:n {#2} }
       {
-        \__kernel_msg_error:nnxx { cs } { bad-number-of-arguments }
+        \__kernel_msg_error:nnxx { kernel } { bad-number-of-arguments }
           { \token_to_str:c { #1 : #2 } }
           { \tl_count:n {#2} }
         \use_none:nn
