Correct one message module name

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2183,7 +2183,7 @@
         \tl_if_empty:nF {#6}
           {
             \__kernel_msg_error:nnxx
-              { prg } { conditional-form-unknown }
+              { kernel } { conditional-form-unknown }
               {#6} { \token_to_str:c { #1 : #2 } }
           }
         \use_none:nnnnnn
