--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -444,6 +444,34 @@
 %   all (see the discussion of message redirection).
 % \end{function}
 %
+% \subsection{Messages for showing material}
+%
+% \begin{function}[added = 2017-12-04]
+%   {
+%     \msg_show:nnnnnn ,
+%     \msg_show:nnnnn  ,
+%     \msg_show:nnnn   ,
+%     \msg_show:nnn    ,
+%     \msg_show:nn     ,
+%     \msg_show:nnxxxx ,
+%     \msg_show:nnxxx  ,
+%     \msg_show:nnxx   ,
+%     \msg_show:nnx
+%   }
+%   \begin{syntax}
+%     \cs{msg_show:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
+%   \end{syntax}
+%   Issues \meta{module} information \meta{message}, passing \meta{arg
+%   one} to \meta{arg four} to the text-creating functions.  The
+%   information text is shown on the terminal and the \TeX{} run is
+%   interrupted in a manner similar to \cs{tl_show:n}.  This is used in
+%   conjunction with \cs{msg_show_item:n} and similar functions to print
+%   complex variable contents completely.  If the formatted text does
+%   not contain |>~| at the start of a line, an additional line |>~.|
+%   will be put at the end.  In addition, a final period is added if not
+%   present.
+% \end{function}
+%
 % \subsection{Expandable error messages}
 %
 % In very rare cases it may be necessary to produce errors in an
