Move 'show' messages to kernel

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -2454,16 +2454,16 @@
 %   structure then the code complains.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_show_structure:N
-  { \@@_show_structure:NN \msg_show:nnxxxx }
+  { \@@_show_structure:NN \__kernel_msg_show:nnxxxx }
 \cs_generate_variant:Nn \coffin_show_structure:N { c }
 \cs_new_protected:Npn \coffin_log_structure:N
-  { \@@_show_structure:NN \msg_log:nnxxxx }
+  { \@@_show_structure:NN \__kernel_msg_log:nnxxxx }
 \cs_generate_variant:Nn \coffin_log_structure:N { c }
 \cs_new_protected:Npn \@@_show_structure:NN #1#2
   {
     \@@_if_exist:NT #2
       {
-        #1 { LaTeX / coffins } { show-coffin }
+        #1 { coffins } { show-coffin }
           { \token_to_str:N #2 }
           {
             \iow_newline: >~ ht ~=~ \dim_eval:n { \coffin_ht:N #2 }
