--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -3119,12 +3119,12 @@
 %   To show a key, show its code using a message.
 %    \begin{macrocode}
 \cs_new_protected:Npn \keys_show:nn
-  { \@@_show:Nnn \msg_show:nnxxxx }
+  { \@@_show:Nnn \__kernel_msg_show:nnxxxx }
 \cs_new_protected:Npn \keys_log:nn
-  { \@@_show:Nnn \msg_log:nnxxxx }
+  { \@@_show:Nnn \__kernel_msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:Nnn #1#2#3
   {
-    #1 { LaTeX / keys } { show-key }
+    #1 { keys } { show-key }
       { \@@_trim_spaces:n { #2 / #3 } }
       {
         \keys_if_exist:nnT {#2} {#3}
