--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1756,6 +1756,22 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}
+%   {
+%     \__kernel_msg_log:nnnnnn, \__kernel_msg_log:nnxxxx,
+%     \__kernel_msg_show:nnnnnn, \__kernel_msg_show:nnxxxx
+%   }
+%   For showing messages.
+%    \begin{macrocode}
+\cs_new_protected:Npn \__kernel_msg_log:nnnnnn #1
+  { \msg_log:nnnnnn { LaTeX / #1 } }
+\cs_generate_variant:Nn \__kernel_msg_log:nnnnnn { nnxxxx }
+\cs_new_protected:Npn \__kernel_msg_show:nnnnnn #1
+  { \msg_show:nnnnnn { LaTeX / #1 } }
+\cs_generate_variant:Nn \__kernel_msg_show:nnnnnn { nnxxxx }
+%    \end{macrocode}
+% \end{macro}
+%
 % End the group to eliminate \cs{@@_kernel_class_new:nN}.
 %    \begin{macrocode}
 \group_end:
