--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -5814,7 +5814,7 @@
   {
     \@@_compile:n {#1}
     \@@_show:N \l_@@_internal_regex
-    \msg_show:nnxxxx { LaTeX / regex } { show }
+    \__kernel_msg_show:nnxxxx { regex } { show }
       { \tl_to_str:n {#1} } { }
       { \l_@@_internal_a_tl } { }
   }
@@ -5823,7 +5823,7 @@
     \__kernel_chk_defined:NT #1
       {
         \@@_show:N #1
-        \msg_show:nnxxxx { LaTeX / regex } { show }
+        \__kernel_msg_show:nnxxxx { regex } { show }
           { } { \token_to_str:N #1 }
           { \l_@@_internal_a_tl } { }
       }
