--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -2012,15 +2012,15 @@
 %   Apply the general \cs{__kernel_chk_defined:NT} and
 %   \cs{msg_show:nnnnnn}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \clist_show:N { \@@_show:NN \msg_show:nnxxxx }
+\cs_new_protected:Npn \clist_show:N { \@@_show:NN \__kernel_msg_show:nnxxxx }
 \cs_generate_variant:Nn \clist_show:N { c }
-\cs_new_protected:Npn \clist_log:N { \@@_show:NN \msg_log:nnxxxx }
+\cs_new_protected:Npn \clist_log:N { \@@_show:NN \__kernel_msg_log:nnxxxx }
 \cs_generate_variant:Nn \clist_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX / clist } { show }
+        #1 { clist } { show }
           { \token_to_str:N #2 }
           { \clist_map_function:NN #2 \msg_show_item:n }
           { } { }
@@ -2033,11 +2033,11 @@
 %   A variant of the above: no existence check, empty first argument for
 %   the message.
 %    \begin{macrocode}
-\cs_new_protected:Npn \clist_show:n { \@@_show:Nn \msg_show:nnxxxx }
-\cs_new_protected:Npn \clist_log:n { \@@_show:Nn \msg_log:nnxxxx }
+\cs_new_protected:Npn \clist_show:n { \@@_show:Nn \__kernel_msg_show:nnxxxx }
+\cs_new_protected:Npn \clist_log:n { \@@_show:Nn \__kernel_msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:Nn #1#2
   {
-    #1 { LaTeX / clist } { show }
+    #1 { clist } { show }
       { } { \clist_map_function:nN {#2} \msg_show_item:n } { } { }
   }
 %    \end{macrocode}
