--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -990,7 +990,7 @@
     \tl_if_exist:NTF #1
       {
         \exp_args:No \@@_analysis:n {#1}
-        \msg_show:nnxxxx { LaTeX / tl } { show-tl-analysis }
+        \__kernel_msg_show:nnxxxx { tl } { show-tl-analysis }
           { \token_to_str:N #1 } { \@@_analysis_show: } { } { }
       }
       { \tl_show:N #1 }
@@ -998,7 +998,7 @@
 \cs_new_protected:Npn \tl_analysis_show:n #1
   {
     \@@_analysis:n {#1}
-    \msg_show:nnxxxx { LaTeX / tl } { show-tl-analysis }
+    \__kernel_msg_show:nnxxxx { tl } { show-tl-analysis }
       { } { \@@_analysis_show: } { } { }
   }
 %    \end{macrocode}
