Shorten some message names

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1613,7 +1613,7 @@
       {
         \str_if_empty:NF \l_@@_property_str
           {
-            \__kernel_msg_error:nnxx { keys } { key-property-unknown }
+            \__kernel_msg_error:nnxx { keys } { property-unknown }
               \l_@@_property_str \l_keys_path_str
           }
       }
@@ -1676,7 +1676,7 @@
     #1 \s_@@_nil #2 \@@_property_find_err:w
   {
     \str_clear:N \l__keys_property_str
-    \__kernel_msg_error:nnn { keys } { key-no-property } {#1}
+    \__kernel_msg_error:nnn { keys } { no-property } {#1}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1698,7 +1698,7 @@
           \l_@@_property_str \s_@@_stop
           { \use:c { \c_@@_props_root_str \l_@@_property_str } }
           {
-            \__kernel_msg_error:nnxx { keys } { key-property-requires-value }
+            \__kernel_msg_error:nnxx { keys } { property-requires-value }
               \l_@@_property_str \l_keys_path_str
           }
       }
@@ -1793,7 +1793,7 @@
     \@@_cmd_set:nn \l_keys_path_str { #1 {##1} }
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
-        \__kernel_msg_error:nnxx { keys } { key-choice-unknown }
+        \__kernel_msg_error:nnxx { keys } { choice-unknown }
           \l_keys_path_str {##1}
       }
   }
@@ -2018,7 +2018,7 @@
       }
       {
         \__kernel_msg_error:nnx { keys }
-          { key-property-boolean-values-only }
+          { property-boolean-values-only }
           { .value_ #1 :n }
       }
   }
@@ -2875,7 +2875,7 @@
           { \c_@@_code_root_str \l_@@_module_str / unknown }
           { \@@_execute:no { \l_@@_module_str / unknown } \l_keys_value_tl }
           {
-            \__kernel_msg_error:nnxx { keys } { key-unknown }
+            \__kernel_msg_error:nnxx { keys } { unknown }
               \l_keys_path_str \l_@@_module_str
           }
       }
@@ -3154,13 +3154,13 @@
 \__kernel_msg_new:nnnn { keys } { boolean-values-only }
   { Key~'#1'~accepts~boolean~values~only. }
   { The~key~'#1'~only~accepts~the~values~'true'~and~'false'. }
-\__kernel_msg_new:nnnn { keys } { key-choice-unknown }
+\__kernel_msg_new:nnnn { keys } { choice-unknown }
   { Key~'#1'~accepts~only~a~fixed~set~of~choices. }
   {
     The~key~'#1'~only~accepts~predefined~values,~
     and~'#2'~is~not~one~of~these.
   }
-\__kernel_msg_new:nnnn { keys } { key-unknown }
+\__kernel_msg_new:nnnn { keys } { unknown }
   { The~key~'#1'~is~unknown~and~is~being~ignored. }
   {
     The~module~'#2'~does~not~have~a~key~called~'#1'.\\
