--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1952,7 +1952,7 @@
 \__kernel_msg_new:nnnn { ior } { quote-in-shell }
   { Quotes~in~shell~command~'#1'. }
   { Shell~commands~cannot~contain~quotes~("). }
-\__kernel_msg_new:nnnn { keys } no-property }
+\__kernel_msg_new:nnnn { keys } { no-property }
   { No~property~given~in~definition~of~key~'#1'. }
   {
     \c_@@_coding_error_text_tl
