Shorten some more message names

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1993,7 +1993,7 @@
   }
 \__kernel_msg_new:nnn { quark } { invalid-quark }
   { Invalid~quark~variable~'#1'. }
-\__kernel_msg_new:nnnn { scanmark } { scanmark-already-defined }
+\__kernel_msg_new:nnnn { scanmark } { already-defined }
   { Scan~mark~#1~already~defined. }
   {
     \c_@@_coding_error_text_tl
@@ -2040,9 +2040,9 @@
   { Misused~\exp_end_continue_f:w or~:nw }
 \__kernel_msg_new:nnn { kernel } { bad-variable }
   { Erroneous~variable~#1 used! }
-\__kernel_msg_new:nnn { seq } { misused-sequence }
+\__kernel_msg_new:nnn { seq } { misused }
   { A~sequence~was~misused. }
-\__kernel_msg_new:nnn { prop } { misused-prop }
+\__kernel_msg_new:nnn { prop } { misused }
   { A~property~list~was~misused. }
 \__kernel_msg_new:nnn { prg } { negative-replication }
   { Negative~argument~for~\iow_char:N\\prg_replicate:nn. }
