--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -602,7 +602,7 @@
 %   error and removes its argument.
 %    \begin{macrocode}
 \cs_new:Npn \@@_pair:wn #1 \s_@@ #2
-  { \__kernel_msg_expandable_error:nn { prop } { misused-prop } }
+  { \__kernel_msg_expandable_error:nn { prop } { misused } }
 %    \end{macrocode}
 % \end{macro}
 %
