--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -961,7 +961,7 @@
   {
     \tl_if_in:NnTF \g_@@_marks_tl { #1 }
       {
-        \__kernel_msg_error:nnx { scanmark } { scanmark-already-defined }
+        \__kernel_msg_error:nnx { scanmark } { already-defined }
           { \token_to_str:N #1 }
       }
       {
