--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1981,7 +1981,7 @@
     LaTeX~has~been~asked~to~set~the~property~'#1'~for~key~'#2':~
     this~property~is~not~defined.
   }
-\__kernel_msg_new:nnnn { quark } { invalid-quark-function }
+\__kernel_msg_new:nnnn { quark } { invalid-function }
   { Quark~test~function~'#1'~is~invalid. }
   {
     \c__msg_coding_error_text_tl
@@ -1991,7 +1991,7 @@
       { with~signature~'#2',~but~that~signature~ }
     is~not~valid.
   }
-\__kernel_msg_new:nnn { quark } { invalid-quark }
+\__kernel_msg_new:nnn { quark } { invalid }
   { Invalid~quark~variable~'#1'. }
 \__kernel_msg_new:nnnn { scanmark } { already-defined }
   { Scan~mark~#1~already~defined. }
