Correct coffin module in msg

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -566,7 +566,7 @@
     \coffin_if_exist:NTF #1
       { #2 }
       {
-        \__kernel_msg_error:nnx { coffins } { unknown-coffin }
+        \__kernel_msg_error:nnx { coffin } { unknown-coffin }
           { \token_to_str:N #1 }
       }
   }
@@ -913,7 +913,7 @@
     \prop_get:cnNF
       { coffin ~ \@@_to_value:N #1 ~ poles } {#2} #3
       {
-        \__kernel_msg_error:nnxx { coffins } { unknown-coffin-pole }
+        \__kernel_msg_error:nnxx { coffin } { unknown-coffin-pole }
           { \exp_not:n {#2} } { \token_to_str:N #1 }
         \tl_set:Nn #3 { { 0pt } { 0pt } { 0pt } { 0pt } }
       }
@@ -1147,7 +1147,7 @@
         \l_@@_pole_a_tl \l_@@_pole_b_tl
     \bool_if:NT \l_@@_error_bool
       {
-        \__kernel_msg_error:nn { coffins } { no-pole-intersection }
+        \__kernel_msg_error:nn { coffin } { no-pole-intersection }
         \dim_zero:N \l_@@_x_dim
         \dim_zero:N \l_@@_y_dim
       }
@@ -2463,7 +2463,7 @@
   {
     \@@_if_exist:NT #2
       {
-        #1 { coffins } { show-coffin }
+        #1 { coffin } { show-coffin }
           { \token_to_str:N #2 }
           {
             \iow_newline: >~ ht ~=~ \dim_eval:n { \coffin_ht:N #2 }
@@ -2484,23 +2484,23 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { coffins } { no-pole-intersection }
+\__kernel_msg_new:nnnn { coffin } { no-pole-intersection }
   { No~intersection~between~coffin~poles. }
   {
     LaTeX~was~asked~to~find~the~intersection~between~two~poles,~
     but~they~do~not~have~a~unique~meeting~point:~
     the~value~(0pt,~0pt)~will~be~used.
   }
-\__kernel_msg_new:nnnn { coffins } { unknown-coffin }
+\__kernel_msg_new:nnnn { coffin } { unknown-coffin }
   { Unknown~coffin~'#1'. }
   { The~coffin~'#1'~was~never~defined. }
-\__kernel_msg_new:nnnn { coffins } { unknown-coffin-pole }
+\__kernel_msg_new:nnnn { coffin } { unknown-coffin-pole }
   { Pole~'#1'~unknown~for~coffin~'#2'. }
   {
     LaTeX~was~asked~to~find~a~typesetting~pole~for~a~coffin,~
     but~either~the~coffin~does~not~exist~or~the~pole~name~is~wrong.
   }
-\__kernel_msg_new:nnn { coffins } { show-coffin }
+\__kernel_msg_new:nnn { coffin } { show-coffin }
   {
     Size~of~coffin~#1 : #2 \\
     Poles~of~coffin~#1 : #3 .
