--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -2107,9 +2107,9 @@
     \@@_model_devicen_convert:nnn {#4} {#2} {#3}
   }
 %    \end{macrocode}
-%   For short lists of DeviceN colors, wee can use hand-tuned parsing. This
+%   For short lists of DeviceN colors, we can use hand-tuned parsing. This
 %   lines up with other models, where we allow for up to four components. For
-%   larger spaces,. rather than limit artificially, we use a somewhat slow
+%   larger spaces, rather than limit artificially, we use a somewhat slow
 %   approach based on open-ended commas-lists.
 %    \begin{macrocode}
 \cs_new_protected:cpn { @@_model_devicen_parse_1:nn } #1#2
