--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -164,9 +164,7 @@
 %   Measuring the graphic is done by boxing up: for PDF graphics we could
 %   use |\tex_pdfximagebbox:D|, but if doesn't work for other types.
 %   As the box always starts at $(0,0)$ there is no need to worry about
-%   the lower-left position. The scope in the internal box here means that
-%   thre is no leakage of any graphics stage information at point-of-use from
-%   the image to the rest of the document.
+%   the lower-left position.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_getbb_auxii:n #1
   {
@@ -189,11 +187,7 @@
         { \l_graphics_pagebox_tl }
       {#1}
     \hbox_set:Nn \l_@@_internal_box
-      {
-        \__kernel_backend_scope_begin:
-        \tex_pdfrefximage:D \tex_pdflastximage:D
-        \__kernel_backend_scope_end:
-      }
+      { \tex_pdfrefximage:D \tex_pdflastximage:D }
     \dim_set:Nn \l_graphics_urx_dim { \box_wd:N \l_@@_internal_box }
     \dim_set:Nn \l_graphics_ury_dim { \box_ht:N \l_@@_internal_box }
     \int_const:cn { c_@@_graphics_ #1 \l_@@_graphics_attr_tl _int }
