Drop loading of l3docstrip

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -27,7 +27,7 @@
 \ifx\fmtname\nameofplainTeX\else
   \expandafter\begingroup
 \fi
-\input l3docstrip.tex
+\input docstrip %
 \askforoverwritefalse
 \preamble
 
