--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -22,7 +22,7 @@ The released version of this bundle is available from CTAN.
 
 \fi
 
-\input l3docstrip.tex
+\input docstrip %
 \askforoverwritefalse
 
 \preamble
