Update LaTeX2e to 2021-05-01 PR2

--- a/texmf/tex/latex/base/atveryend-ltx.sty
+++ b/texmf/tex/latex/base/atveryend-ltx.sty
@@ -42,8 +42,8 @@
 %% and covered by LPPL is defined by the unpacking scripts (with
 %% extension .ins) which are part of the distribution.
 %%% From File: ltfilehook.dtx
-\providecommand\ltfilehookversion{v1.0f}
-\providecommand\ltfilehookdate{2021/01/31}
+\providecommand\ltfilehookversion{v1.0g}
+\providecommand\ltfilehookdate{2021/02/08}
 \ProvidesPackage{atveryend-ltx}
    [2020/08/19 v1.0a
      Emulation of the original atvery package^^Jwith kernel methods]
