--- a/texmf/tex/latex/base/latexrelease.sty
+++ b/texmf/tex/latex/base/latexrelease.sty
@@ -7259,7 +7259,7 @@ of this package available from CTAN}
                    in version \math@version}%
         \@eha
   \fi
- \else \expandafter\non@alpherr\fi
+ \else \expandafter\expandafter\expandafter\non@alpherr\fi
  \expandafter#1\ifx\math@bgroup\bgroup{#4}\else#4\fi
  }%
 }
@@ -9049,6 +9049,9 @@ of this package available from CTAN}
   \expandafter\endgroup\if@endpe\@doendpe\fi
   \if@ignore\@ignorefalse\ignorespaces\fi}
 
+\expandafter\let\csname begin \endcsname\@undefined
+\expandafter\let\csname end \endcsname\@undefined
+
 \EndIncludeInRelease
 \IncludeInRelease{2020/10/01}%
                  {\AtBeginEnvironment}{Hooks for environments}%
@@ -9495,6 +9498,28 @@ of this package available from CTAN}
     \mb@b
     \kern\z@}}
 \EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\color@begingroup}{color group settings}%
+\let\color@begingroup\begingroup
+\def\color@endgroup{\endgraf\endgroup}
+\def\color@setgroup{\color@begingroup}        % changed further in color package
+\let\normalcolor\relax                        % remains untouched; only changed in a color package
+\def\color@hbox{\hbox\bgroup\color@begingroup}
+\def\color@vbox{\vbox\bgroup\color@begingroup}
+\def\color@endbox{\color@endgroup\egroup}
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\color@begingroup}{color group settings}%
+
+\let\color@begingroup\relax
+\let\color@endgroup\relax
+\let\color@setgroup\relax
+\let\normalcolor\relax
+\let\color@hbox\relax
+\let\color@vbox\relax
+\let\color@endbox\relax
+
+\EndIncludeInRelease
 \IncludeInRelease{2015/01/01}%
                  {\savebox}{Make \savebox robust}%
 \DeclareRobustCommand\savebox[1]{%
@@ -9573,6 +9598,39 @@ of this package available from CTAN}
   \parfillskip\@flushglue \lineskip\normallineskip
   \baselineskip\normalbaselineskip
   \sloppy}
+\EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\@mpfootnotetext}{footnotetext tagging}%
+\long\def\@mpfootnotetext#1{%
+  \global\setbox\@mpfootins\vbox{%
+    \unvbox\@mpfootins
+    \reset@font\footnotesize
+    \hsize\columnwidth
+    \@parboxrestore
+    \protected@edef\@currentlabel
+         {\csname p@mpfootnote\endcsname\@thefnmark}%
+    \color@begingroup
+      \@makefntext{%
+        \rule\z@\footnotesep\ignorespaces#1\@finalstrut\strutbox}%
+    \par
+    \color@endgroup}}
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\@mpfootnotetext}{footnotetext tagging}%
+
+\long\def\@mpfootnotetext#1{%
+  \global\setbox\@mpfootins\vbox{%
+    \unvbox\@mpfootins
+    \reset@font\footnotesize
+    \hsize\columnwidth
+    \@parboxrestore
+    \protected@edef\@currentlabel
+         {\csname p@mpfootnote\endcsname\@thefnmark}%
+    \color@begingroup
+      \@makefntext{%
+        \rule\z@\footnotesep\ignorespaces#1\@finalstrut\strutbox}%
+    \color@endgroup}}
+
 \EndIncludeInRelease
 \IncludeInRelease{2015/01/01}%
                  {\rule}{Make \rule robust}%
@@ -10516,6 +10574,39 @@ of this package available from CTAN}
   \@fpbot \@dblfpbot
 }%
 \EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\@savemarbox}{Explicit par for marginpar}%
+\long\def \@savemarbox #1#2{%
+  \global\setbox #1%
+    \color@vbox
+      \vtop{%
+        \hsize\marginparwidth
+        \@parboxrestore
+        \@marginparreset
+        #2\par
+        \@minipagefalse
+        \outer@nobreak
+        }%
+    \color@endbox
+}
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\@savemarbox}{Explicit par for marginpar}%
+
+\long\def \@savemarbox #1#2{%
+  \global\setbox #1%
+    \color@vbox
+      \vtop{%
+        \hsize\marginparwidth
+        \@parboxrestore
+        \@marginparreset
+        #2%
+        \@minipagefalse
+        \outer@nobreak
+        }%
+    \color@endbox
+}
+\EndIncludeInRelease
 \IncludeInRelease{2020/10/01}%
                  {\@textsuperscript}{superscript baseline}%
 \def\@textsuperscript#1{%
@@ -10551,6 +10642,56 @@ of this package available from CTAN}
                  {\@textsubscript}{subscript baseline}%
 \let\@textsubscript\@undefined
 \EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\@footnotetext}{footnotetext tagging}%
+\long\def\@footnotetext#1{\insert\footins{%
+    \reset@font\footnotesize
+    \interlinepenalty\interfootnotelinepenalty
+    \splittopskip\footnotesep
+    \splitmaxdepth \dp\strutbox \floatingpenalty \@MM
+    \hsize\columnwidth \@parboxrestore
+    \protected@edef\@currentlabel{%
+       \csname p@footnote\endcsname\@thefnmark
+    }%
+    \color@begingroup
+      \@makefntext{%
+        \rule\z@\footnotesep\ignorespaces#1\@finalstrut\strutbox}%
+    \par
+    \color@endgroup}}%
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\@footnotetext}{footnotetext tagging}%
+
+\long\def\@footnotetext#1{\insert\footins{%
+    \reset@font\footnotesize
+    \interlinepenalty\interfootnotelinepenalty
+    \splittopskip\footnotesep
+    \splitmaxdepth \dp\strutbox \floatingpenalty \@MM
+    \hsize\columnwidth \@parboxrestore
+    \protected@edef\@currentlabel{%
+       \csname p@footnote\endcsname\@thefnmark
+    }%
+    \color@begingroup
+      \@makefntext{%
+        \rule\z@\footnotesep\ignorespaces#1\@finalstrut\strutbox}%
+    \color@endgroup}}%
+
+\EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\footref}{Add footref}%
+\def\footref#1{%
+  \begingroup
+    \unrestored@protected@xdef\@thefnmark{\ref{#1}}%
+  \endgroup
+  \@footnotemark
+}
+\EndIncludeInRelease
+%%<latexrelease>\IncludeInRelease{0000/00/00}%
+%%<latexrelease>                 {\footref}{Add footref}%
+%%<latexrelease>
+%%<latexrelease>\let\footref\@undefined
+%%<latexrelease>
+%%<latexrelease>\EndIncludeInRelease
 %%% From File: ltidxglo.dtx
 %%% From File: ltbibl.dtx
 \IncludeInRelease{2021/05/01}%
@@ -10837,8 +10978,28 @@ of this package available from CTAN}
 \let\ProvidesClass\ProvidesPackage
 \@onlypreamble\ProvidesClass
 \EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\@pass@ptions}{Raw option lists}%
+\def\@pass@ptions#1#2#3{%
+  \@expl@@@filehook@set@curr@file@@nNN
+    {\@expl@@@filehook@resolve@file@subst@@w #3.#1\@nil}%
+      \reserved@a\reserved@b
+  \@expl@@@filehook@clear@replacement@flag@@
+  \expandafter\xdef\csname opt@\reserved@a\endcsname{%
+    \@ifundefined{opt@\reserved@a}\@empty
+      {\csname opt@\reserved@a\endcsname,}%
+    \zap@space#2 \@empty}%
+  \expandafter\let
+    \csname opt@#3.#1\expandafter\endcsname
+    \csname opt@\reserved@a\endcsname
+    \@ifundefined{@raw@opt@#3.#1}%
+      {\expandafter\gdef\csname @raw@opt@#3.#1\endcsname{#2}}%
+      {\expandafter\g@addto@macro\csname @raw@opt@#3.#1\endcsname{,#2}}%
+}
+\EndIncludeInRelease
 \IncludeInRelease{2020/10/01}{\@pass@ptions}
   {Add file replacement in \@pass@ptions}%
+
 \def\@pass@ptions#1#2#3{%
   \@expl@@@filehook@set@curr@file@@nNN
     {\@expl@@@filehook@resolve@file@subst@@w #3.#1\@nil}%
@@ -10854,11 +11015,32 @@ of this package available from CTAN}
 \EndIncludeInRelease
 \IncludeInRelease{0000/00/00}{\@pass@ptions}
   {\@pass@ptions}%
+
 \def\@pass@ptions#1#2#3{%
   \expandafter\xdef\csname opt@#3.#1\endcsname{%
     \@ifundefined{opt@#3.#1}\@empty
       {\csname opt@#3.#1\endcsname,}%
     \zap@space#2 \@empty}}
+\EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\OptionNotUsed}{filter unused option list}%
+\def\@remove@eq@value#1=#2\@nil{#1}
+\def\OptionNotUsed{%
+  \ifx\@currext\@clsextension
+    \xdef\@unusedoptionlist{%
+      \ifx\@unusedoptionlist\@empty\else\@unusedoptionlist,\fi
+      \expandafter\@remove@eq@value\CurrentOption=\@nil}%
+  \fi}
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\OptionNotUsed}{filter unused option list}%
+\let\@remove@eq@value\@undefined
+\def\OptionNotUsed{%
+  \ifx\@currext\@clsextension
+    \xdef\@unusedoptionlist{%
+      \ifx\@unusedoptionlist\@empty\else\@unusedoptionlist,\fi
+      \CurrentOption}%
+  \fi}
 \EndIncludeInRelease
 \IncludeInRelease{2020/10/01}%
                  {\@process@pti@ns}{Unused options issue}%
@@ -10891,6 +11073,21 @@ of this package available from CTAN}
   \let\CurrentOption\@empty
   \let\@fileswith@pti@ns\@@fileswith@pti@ns
   \AtEndOfPackage{\let\@unprocessedoptions\relax}}
+\EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\@use@ption}{filter unused option list}%
+\def\@use@ption{%
+  \@expandtwoargs\@removeelement
+     {\expandafter\@remove@eq@value\CurrentOption=\@nil}%
+  \@unusedoptionlist\@unusedoptionlist
+  \csname ds@\CurrentOption\endcsname}
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\@use@ption}{filter unused option list}%
+\def\@use@ption{%
+  \@expandtwoargs\@removeelement\CurrentOption
+  \@unusedoptionlist\@unusedoptionlist
+  \csname ds@\CurrentOption\endcsname}
 \EndIncludeInRelease
 \IncludeInRelease{2017/01/01}%
                  {\ExecuteOptions}{Spaces in \ExecuteOptions}%
@@ -10926,6 +11123,34 @@ of this package available from CTAN}
 \def\RequirePackageWithOptions{%
   \AtEndOfPackage{\let\@unprocessedoptions\relax}%
   \@loadwithoptions\@pkgextension\RequirePackage}
+\EndIncludeInRelease
+\IncludeInRelease{2020/10/01}%
+        {\@fileswith@pti@ns}{ifx tests in \@fileswith@pti@ns}%
+\def\@fileswith@pti@ns#1[#2]#3[#4]{%
+  \ifx#1\@clsextension
+    \ifx\@classoptionslist\relax
+      \xdef\@classoptionslist{\zap@space#2 \@empty}%
+      \gdef\@raw@classoptionslist{#2}%
+      \def\reserved@a{%
+        \@onefilewithoptions#3[{#2}][{#4}]#1%
+        \@documentclasshook}%
+    \else
+      \def\reserved@a{%
+        \@onefilewithoptions#3[{#2}][{#4}]#1}%
+    \fi
+  \else
+    \def\reserved@b##1,{%
+      \ifx\@nnil##1\relax\else
+        \ifx\@nnil##1\@nnil\else
+         \noexpand\@onefilewithoptions##1[{#2}][{#4}]%
+         \noexpand\@pkgextension
+        \fi
+        \expandafter\reserved@b
+      \fi}%
+      \edef\reserved@a{\zap@space#3 \@empty}%
+      \edef\reserved@a{\expandafter\reserved@b\reserved@a,\@nnil,}%
+  \fi
+  \reserved@a}
 \EndIncludeInRelease
 \IncludeInRelease{2017/01/01}%
         {\@fileswith@pti@ns}{ifx tests in \@fileswith@pti@ns}%
@@ -11527,8 +11752,8 @@ of this package available from CTAN}
 \endgroup%
 \EndIncludeInRelease
 %%% From File: ltfilehook.dtx
-\providecommand\ltfilehookversion{v1.0f}
-\providecommand\ltfilehookdate{2021/01/31}
+\providecommand\ltfilehookversion{v1.0g}
+\providecommand\ltfilehookdate{2021/02/08}
 \IncludeInRelease{2020/10/01}%
                  {\CurrentFile}{Hook management file}%
 \ExplSyntaxOn
@@ -11708,6 +11933,7 @@ of this package available from CTAN}
 \long\def \InputIfFileExists#1#2{%
   \IfFileExists{#1}%
     {#2\@addtofilelist{#1}\@@input \@filef@und}}
+\expandafter\let\csname InputIfFileExists \endcsname\@undefined
 \let\@input@file@exists@with@hooks\@undefined
 \let\unqu@tefilef@und\@undefined
 \EndIncludeInRelease
@@ -13508,6 +13734,19 @@ of this package available from CTAN}
 \IncludeInRelease{0000/00/00}%
        {\document@default@language}{Save language for hyphenation}%
 \let\document@default@language\@undefined
+\EndIncludeInRelease
+\IncludeInRelease{2021/05/01}%
+                 {\pdfgentounicode}{Preload glyphtounicode}%
+\ifx \pdfgentounicode \@undefined \else
+    \input glyphtounicode
+  \pdfgentounicode=1
+\fi
+\EndIncludeInRelease
+\IncludeInRelease{0000/00/00}%
+                 {\pdfgentounicode}{Preload glyphtounicode}%
+\ifx \pdfgentounicode \@undefined \else
+  \pdfgentounicode=0
+\fi
 \EndIncludeInRelease
 \IncludeInRelease{2018/04/01}%
                  {\UTFviii@invalid}{UTF-8 default}%
