Tidy some section headers

--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -49,9 +49,7 @@
 %
 % \begin{documentation}
 %
-% \section{\pkg{l3pdf} documentation}
-%
-% \subsection{Objects}
+% \section{Objects}
 %
 % \begin{function}[added = 2021-02-10]{\pdf_object_new:nn}
 %   \begin{syntax}
@@ -135,7 +133,7 @@
 %   Inserts the appropriate information to reference the \meta{pageobject}.
 % \end{function}
 %
-% \subsection{Version}
+% \section{Version}
 %
 % \begin{function}[pTF, EXP, added = 2021-02-10]{\pdf_version_compare:Nn}
 %   \begin{syntax}
@@ -167,7 +165,7 @@
 %   Expands to the currently-active PDF version.
 % \end{function}
 %
-% \subsection{Compression}
+% \section{Compression}
 %
 % \begin{function}[added = 2021-02-10]{\pdf_uncompress:}
 %   \begin{syntax}
@@ -179,7 +177,7 @@
 %   initialised.
 % \end{function}
 %
-% \subsection{Destinations}
+% \section{Destinations}
 %
 % Destinations are the places a link jumped too.
 % Unlike the name may suggest they don't described
