Drop unneeded XeTeX 'adjustment'

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -1352,21 +1352,6 @@
 %
 % \subsubsection{Annotations}
 %
-% \begin{variable}{\g_@@_landscape_bool}
-%   There is a bug in \texttt{dvipdfmx}/\XeTeX{} which means annotations do
-%   not rotate. As such, we need to know if landscape is active.
-%    \begin{macrocode}
-\bool_new:N \g_@@_landscape_bool
-\cs_if_exist:NT \landscape
-  {
-    \tl_put_right:Nn \landscape
-      { \bool_gset_true:N \g_@@_landscape_bool }
-    \tl_put_left:Nn \endlandscape
-      { \bool_gset_false:N \g_@@_landscape_bool }
-  }
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}{\g_@@_backend_annotation_int}
 %   Needed as objects which are not annotations could be created.
 %    \begin{macrocode}
@@ -1374,26 +1359,10 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\@@_backend_annotation:nnnn, \@@_backend_annotation_aux:nnnn}
+% \begin{macro}{\@@_backend_annotation:nnnn}
 %   Simply pass the raw data through, just dealing with evaluation of dimensions.
-%   The only wrinkle is landscape: we have to adjust by hand.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_annotation:nnnn #1#2#3#4
-  {
-    \bool_if:NTF \g_@@_landscape_bool
-      {
-         \box_move_up:nn {#2}
-           {
-             \vbox:n
-               {
-                 \@@_backend_annotation_aux:nnnn
-                   { #2 + #3 } {#1} { 0pt } {#4}
-               }
-           }
-      }
-      { \@@_backend_annotation_aux:nnnn {#1} {#2} {#3} {#4} }
-  }
-\cs_new_protected:Npn \@@_backend_annotation_aux:nnnn #1#2#3#4
   {
     \int_gincr:N \g_@@_backend_object_int
     \int_gset_eq:NN \g_@@_backend_annotation_int \g_@@_backend_object_int
