Ensure main color stack is always defined for (x)dvipdfmx

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -235,6 +235,7 @@
           { page ~ direct } { 0 ~ g ~ 0 ~ G }
         \int_set_eq:NN \l_@@_backend_stack_int
           \c_@@_backend_main_stack_int
+        \int_const:cn { main@pdfcolorstack } { \c_@@_backend_main_stack_int }
       }
   }
 %    \end{macrocode}
