Add "pdfcolorstack n current" to (x)dvipdfmx scopes

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -240,6 +240,17 @@
           \c_@@_backend_main_stack_int
         \int_const:cn { main@pdfcolorstack } { \c_@@_backend_main_stack_int }
       }
+%    \end{macrocode}
+%   The backend automatically restores the stack color from the \enquote{classical}
+%   approach (\texttt{pdf:bcolor}) after a scope. That will be an issue for us, so
+%   we manually ensure that the one we are using is inserted.
+%    \begin{macrocode}
+    \cs_gset_protected:Npn \__kernel_backend_scope_end:
+      {
+        \__kernel_backend_literal:n { x:grestore }
+        \__kernel_backend_literal:n
+          { pdfcolorstack ~ \g_@@_backend_stack_int current }
+      }
   }
 %    \end{macrocode}
 % \end{variable}
