--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1191,6 +1191,10 @@
   \@@_primitive:NN \omathcode             \tex_omathcode:D
   \@@_primitive:NN \oradical              \tex_oradical:D
 %    \end{macrocode}
+% Newer cross-engine primitives.
+%    \begin{macrocode}
+  \@@_primitive:NN \tracingstacklevels    \tex_tracingstacklevels:D
+%    \end{macrocode}
 % End of the \enquote{just the names} part of the source.
 %    \begin{macrocode}
 %</names|package>
