--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -111,8 +111,8 @@
 %     \item[\texttt{array}] A space-separated list of values
 %     \item[\texttt{dict}] Key--value pairs in the form
 %       \texttt{/\meta{key} \meta{value}}
-%     \item[\texttt{fstream}] Two brace groups: \meta{file name} and
-%       \meta{file content}
+%     \item[\texttt{fstream}] Two brace groups: \meta{attributes (dictionary)}
+%       and \meta{file name}
 %     \item[\texttt{stream}] Two brace groups: \meta{attributes (dictionary)}
 %       and \meta{stream contents}
 %   \end{itemize}
